--- a/package.json
+++ b/package.json
@@ -1,20 +1,14 @@
 {
-  "name": "netlify-ki-match",
+  "name": "ki-ferien-match",
   "version": "1.0.0",
-  "description": "Netlify Function for AI matching",
+  "description": "Netlify Function with Resend Integration",
   "main": "index.js",
   "dependencies": {
-    "querystring": "^0.2.1"
+    "resend": "^3.2.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "netlify",
-    "serverless",
-    "lambda"
-  ],
   "author": "",
   "license": "ISC"
 }
