--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,8 @@
-[[build]
-  # Der Punkt bedeutet, dass index.html und match.js im Hauptordner liegen
+[build]
   publish = "."
-  # Hier liegen deine Backend-Dateien (match.js und gruppen-match.js)
   functions = "netlify/functions"
 
 [[redirects]]
-  # Leitet Anfragen von /api/match an die Serverless Function weiter
   from = "/api/*"
   to = "/.netlify/functions/:splat"
   status = 200
@@ -13,5 +10,4 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    # Erlaubt die Kommunikation zwischen Frontend und Backend
     Access-Control-Allow-Origin = "*"
